# paper-industrial-activity

./: .darglint  .gitignore  .mypy.ini  .pre-commit-config.yaml  LICENSE  README.md  SNIPPETS.md  radenv.yaml  setup.cfg  setup.py
analyses/: CONTRIBUTE.md  INSTALL-ENVIRONMENT.sh  README.md  env.yaml  pyproject.toml  radenv.yaml  setup.cfg
analyses/analyses_functions/: eliminate_ice_string.py  vessel_queries.py
analyses/assets/: validate.sql.j2
analyses/features/: GenerateFeatures.py  Readme.md
analyses/figures/: AreaImaged.py  BarChartByCountry.py  CoverageMaps.py  DistanceFromShoreInfraPlot.py  Fig1BarchartData.py  FishingDetectionMaps.py  FishingInteractionPlot.py  FishingNonfishingGlobalMaps.py  FishingNonfishingSeries.py  InfraBarplots.py  InfraGlobalMapsSeries.py  MPAsAndInfraMaps.py  NKoreaTimeSeries.py  README.md  RecallCurve.py  TopNationsOilSeries.py  VesselBarplots.py
analyses/infrastructure/: ClusterInfrastructure.py  CreateTemporalAveragedLabels.py  RepeatedObejcts-v20220805.py  infra_labelled_analysis.py  oil_analysis.py  wind_analysis.py
analyses/matching/: LikelihoodInScene.py  MatchSARMultiplied.py  RecallCurve.py
analyses/matching_pipeline/: LikelihoodInScene.py  readme.md
analyses/model_features/: UploadNPP.py
analyses/notebooks/analyses_spatial/: CreateStudyArea.py  DetectionsWithOverpasses.py
analyses/paper_figures/: Figure2Sup.py  FishingDetectionMaps.py  FishingInteractionPlot.py  FishingNonfishingGlobalMaps.py  GlobalMaps.py  InfraBarplots.py  InfraGlobalMapsSeries.py  NonfishingDetectionMaps.py  Readme.md
analyses/pkg/: bigquery.py  bigquery_helper_functions.py  eliminate_ice_string.py  infra_modules.py
analyses/rasterize/: CreateOverpassRasters.py  Rasterize.py  raster.sql.j2
analyses/spatial/: AISFishingByContinent.py  Concentration.py  CreateStudyArea.py  CreateVesselActivityRasterDataframe.py  DetectionsWithOverpasses.py  DownloadAllVesselDetections.py  EEZAnalysis.py  FalsePositiveEstimation.py  Fig1-CreateVesselActivityRasterDataframe.py  Fig1BarchartData.py  FindAzimuthAmbigutiesAngle.py  Readme.md
analyses/timeseries/: 24DayAugmented.py  ExtrapolateTimeSeries.py  Readme.md
analyses/utils/: bigquery_helper_functions.py  vessel_queries.py
analysis/: README.md
(+197 files in other folders)
