[metadata]
name = analyses_module
version = 0.1.0
author = David Kroodsma
author_email = david@globalfishingwatch.org
description = Code for the paper analyses and figures.
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GlobalFishingWatch/paper-undisclosed-industrial-activity-private
project_urls =
    Bug Tracker = https://github.com/GlobalFishingWatch/paper-undisclosed-industrial-activity-private/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = pkg
include_package_data = True
python_requires = >=3.8
install_requires =
    Jinja2~=3.0.1
    google-cloud-bigquery~=3.0.1
    # project specific
    sentinelsat~=1.1.1
    pandas~=1.3.5
    selenium~=4.3.0
    webdriver-manager~=3.7.1
    pandas-gbq~=0.17.6
    rtyaml~=1.0.0

[options.entry_points]
console_scripts =
    pkg_name = pkg_name.__main__

[options.packages.find]
where = pkg
include = *
# alternatively: `exclude = additional*`

[options.extras_require]
all =
    %(dev)s
    %(nb)s
    %(test)s
dev =
    black
    darglint
    mypy
    mypy-extensions
    pipdeptree
    pre-commit
    pytest-cov
    jupytext
    safety
    Flake8-pyproject
    magic-wormhole~=0.12.0
nb =
    jupyter~=1.0.0
    jupytext~=1.13.8
    ipykernel~=6.15.0
test =
    pytest~=7.1.2
    pytest-cov~=3.0.0

[darglint]
docstring_style=google
strictness=full
